--- a/packages/math/package.json
+++ b/packages/math/package.json
@@ -1,15 +1,23 @@
 {
-  "private": true,
   "name": "@woven-canvas/math",
   "version": "0.1.0",
   "description": "Math utilities for 2D vector operations",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WillH0lt/woven-canvas"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/WillH0lt/woven-canvas",
+  "author": {
+    "name": "Will Holt",
+    "email": "will@william.land"
+  },
   "files": [
-    "build"
+    "build",
+    "LICENSE"
   ],
   "main": "./build/index.js",
-  "module": "./build/index.mjs",
   "types": "./build/index.d.ts",
-  "__exports-comment": "// Define output files for Node.js export maps (https://nodejs.org/api/packages.html#exports)",
   "exports": {
     ".": {
       "@woven-canvas/source": "./src/index.ts",
@@ -30,12 +38,12 @@
     "build:watch": "pnpm build --watch",
     "check:exports": "attw --pack .",
     "test": "vitest  --config ../../vitest.config.ts run",
-    "test:watch": "vitest  --config ../../vitest.config.ts run --watch"
+    "test:watch": "vitest  --config ../../vitest.config.ts run --watch",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {},
   "devDependencies": {
-    "vitest": "^4.0.7",
-    "@types/bun": "latest"
+    "vitest": "^4.0.7"
   },
   "type": "module",
   "peerDependencies": {
