--- a/packages/plugin-selection/package.json
+++ b/packages/plugin-selection/package.json
@@ -1,15 +1,23 @@
 {
-  "private": true,
   "name": "@woven-canvas/plugin-selection",
   "version": "0.1.0",
-  "description": "Framework-agnostic editor library built on ECS",
+  "description": "Selection plugin - select, move, and resize objects on infinite canvas",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WillH0lt/woven-canvas"
+  },
+  "license": "MIT",
+  "homepage": "https://github.com/WillH0lt/woven-canvas",
+  "author": {
+    "name": "Will Holt",
+    "email": "will@william.land"
+  },
   "files": [
-    "build"
+    "build",
+    "LICENSE"
   ],
   "main": "./build/index.js",
-  "module": "./build/index.mjs",
   "types": "./build/index.d.ts",
-  "__exports-comment": "// Define output files for Node.js export maps (https://nodejs.org/api/packages.html#exports)",
   "exports": {
     ".": {
       "@woven-canvas/source": "./src/index.ts",
@@ -30,22 +38,22 @@
     "build:watch": "pnpm build --watch",
     "check:exports": "attw --pack .",
     "test": "vitest --config ../../vitest.config.ts run",
-    "test:watch": "vitest --config ../../vitest.config.ts --watch"
+    "test:watch": "vitest --config ../../vitest.config.ts --watch",
+    "prepublishOnly": "pnpm build"
   },
   "dependencies": {
     "@woven-canvas/core": "workspace:^",
-    "@woven-canvas/math": "workspace:^",
-    "fractional-indexing-jittered": "^1.0.0",
-    "zod": "^3.24.1"
+    "@woven-canvas/math": "workspace:^"
   },
   "devDependencies": {
-    "@types/bun": "latest",
     "vite": "^7.2.4",
     "vitest": "^4.0.7"
   },
   "type": "module",
   "peerDependencies": {
+    "fractional-indexing-jittered": "^1",
     "typescript": "^5",
-    "xstate": "^5"
+    "xstate": "^5",
+    "zod": "^3 || ^4"
   }
 }
