--- a/biome.jsonc
+++ b/biome.jsonc
@@ -50,12 +50,20 @@
     },
     {
       // Biome doesn't understand Vue <script setup> - variables used in templates appear unused
+      // and organizeImports breaks script tag boundaries
       "includes": ["**/*.vue"],
       "linter": {
         "rules": {
           "correctness": {
             "noUnusedVariables": "off",
             "noUnusedImports": "off"
+          }
+        }
+      },
+      "assist": {
+        "actions": {
+          "source": {
+            "organizeImports": "off"
           }
         }
       }
