--- a/docs/package.json
+++ b/docs/package.json
@@ -14,12 +14,17 @@
   "dependencies": {
     "@astrojs/starlight": "^0.37.2",
     "@astrojs/starlight-tailwind": "^4.0.2",
+    "@astrojs/vue": "^5.0.6",
     "@iconify-json/lucide": "^1.2.90",
     "@tailwindcss/postcss": "^4.1.18",
+    "@woven-canvas/core": "workspace:*",
+    "@woven-canvas/plugin-selection": "workspace:*",
+    "@woven-canvas/vue": "workspace:*",
     "astro": "^5.16.9",
     "astro-icon": "^1.1.5",
     "sharp": "^0.34.5",
     "tailwindcss": "^4.0.0",
+    "vue": "^3.5.26",
     "zod": "3.24.4",
     "zod-to-json-schema": "3.24.5"
   },
