--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "build:watch": "turbo run build:watch",
     "check:exports": "turbo run check:exports",
     "clean": "turbo run clean",
-    "lint:ci": "biome ci",
-    "lint": "biome check --fix --unsafe",
+    "lint:ci": "biome ci && prettier --check \"**/*.md\"",
+    "lint": "biome check --fix --unsafe && prettier --write \"**/*.md\"",
     "test": "pnpm -r --if-present test",
     "test:watch": "pnpm -r --if-present test:watch",
     "prepare": "husky"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.18.2",
+    "prettier": "^3.5.3",
     "@biomejs/biome": "^2.3.14",
     "@microsoft/api-extractor": "^7.54.0",
     "@types/node": "24.10.0",
@@ -46,7 +47,8 @@
     "vitest": "^4.0.7"
   },
   "lint-staged": {
-    "*.{js,ts,cjs,mjs,md,json,jsonc}": "biome ci --no-errors-on-unmatched"
+    "*.{js,ts,cjs,mjs,json,jsonc}": "biome ci --no-errors-on-unmatched",
+    "*.md": "prettier --check"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
