--- a/biome.jsonc
+++ b/biome.jsonc
@@ -15,6 +15,8 @@
       "**/examples/**/*.tsx",
       "**/examples/**/*.json",
       "**/examples/**/*.vue",
+      "**/docs/**/*.vue",
+      "**/docs/**/*.ts",
       "!**/node_modules",
       "!public/",
       "!build/",
