--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "vitest": "^4.0.7"
   },
   "lint-staged": {
-    "*.{js,ts,cjs,mjs,json,jsonc}": "biome ci --no-errors-on-unmatched",
+    "*.{js,ts,cjs,mjs,json,jsonc,vue}": "biome ci --no-errors-on-unmatched",
     "*.md": "prettier --check"
   },
   "publishConfig": {
