--- a/docs/package.json
+++ b/docs/package.json
@@ -17,10 +17,10 @@
     "@astrojs/vue": "^5.0.6",
     "@iconify-json/lucide": "^1.2.90",
     "@tailwindcss/postcss": "^4.1.18",
-    "@woven-canvas/core": "workspace:*",
+    "@woven-canvas/core": "workspace:^",
     "@woven-canvas/math": "workspace:^",
-    "@woven-canvas/plugin-selection": "workspace:*",
-    "@woven-canvas/vue": "workspace:*",
+    "@woven-canvas/plugin-selection": "workspace:^",
+    "@woven-canvas/vue": "workspace:^",
     "astro": "^5.16.9",
     "astro-icon": "^1.1.5",
     "sharp": "^0.34.5",
