--- a/packages/plugin-arrows/package.json
+++ b/packages/plugin-arrows/package.json
@@ -40,9 +40,9 @@
     "prepublishOnly": "pnpm build"
   },
   "dependencies": {
-    "@woven-canvas/core": "workspace:*",
-    "@woven-canvas/math": "workspace:*",
-    "@woven-canvas/plugin-selection": "workspace:*"
+    "@woven-canvas/core": "workspace:^",
+    "@woven-canvas/math": "workspace:^",
+    "@woven-canvas/plugin-selection": "workspace:^"
   },
   "devDependencies": {
     "resize-observer-polyfill": "^1.5.1",
