--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@woven-canvas/core",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Framework-agnostic editor library built on ECS",
   "repository": {
     "type": "git",
@@ -43,11 +43,11 @@
   },
   "dependencies": {
     "@woven-canvas/math": "workspace:^",
-    "@woven-ecs/canvas-store": "^1.0.3",
-    "@woven-ecs/core": "^1.0.3",
-    "fractional-indexing-jittered": "^1.0.0",
-    "xstate": "^5.24.0",
-    "zod": "^4.2.1"
+    "@woven-ecs/canvas-store": "catalog:",
+    "@woven-ecs/core": "catalog:",
+    "fractional-indexing-jittered": "catalog:",
+    "xstate": "catalog:",
+    "zod": "catalog:"
   },
   "devDependencies": {
     "vitest": "^4.0.7"
