--- a/packages/plugin-eraser/package.json
+++ b/packages/plugin-eraser/package.json
@@ -48,7 +48,7 @@
   "devDependencies": {
     "resize-observer-polyfill": "^1.5.1",
     "vitest": "^4.0.7",
-    "zod": "^4.2.1"
+    "zod": "catalog:"
   },
   "type": "module",
   "peerDependencies": {
