--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -3,3 +3,10 @@ packages:
   - "packages/ecs-sync-server/examples/*"
   - "examples/*"
   - "docs"
+
+catalog:
+  "@woven-ecs/canvas-store": "^1.0.5"
+  "@woven-ecs/core": "^1.0.4"
+  "fractional-indexing-jittered": "^1.0.0"
+  "xstate": "^5.24.0"
+  "zod": "^4.2.1"
