--- a/packages/vue/tsconfig.build.json
+++ b/packages/vue/tsconfig.build.json
@@ -2,6 +2,10 @@
   "extends": "./tsconfig.json",
   "include": ["src"],
   "compilerOptions": {
-    "rootDir": "src"
+    "rootDir": "src",
+    "composite": false,
+    "incremental": false,
+    "declaration": true,
+    "declarationMap": true
   }
 }
