--- a/packages/plugin-canvas-controls/package.json
+++ b/packages/plugin-canvas-controls/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@woven-canvas/plugin-canvas-controls",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Canvas controls plugin - pan, zoom, and scroll for infinite canvas",
   "repository": {
     "type": "git",
@@ -41,16 +41,16 @@
     "test:watch": "vitest --config ../../vitest.config.ts run --watch",
     "prepublishOnly": "pnpm build"
   },
-  "dependencies": {
-    "@woven-canvas/core": "workspace:^",
-    "@woven-canvas/math": "workspace:^"
-  },
   "devDependencies": {
+    "@woven-canvas/core": "workspace:^",
+    "@woven-canvas/math": "workspace:^",
     "resize-observer-polyfill": "^1.5.1",
     "vitest": "^4.0.7"
   },
   "type": "module",
   "peerDependencies": {
+    "@woven-canvas/core": "workspace:^",
+    "@woven-canvas/math": "workspace:^",
     "typescript": "^5",
     "xstate": "^5",
     "zod": "^3 || ^4"
