--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@woven-canvas/vue",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "description": "Vue 3 components for woven-canvas infinite canvas",
   "repository": {
     "type": "git",
@@ -48,7 +48,6 @@
   "dependencies": {
     "@floating-ui/vue": "^1.1.6",
     "@woven-canvas/asset-sync": "workspace:^",
-    "@woven-canvas/math": "workspace:^",
     "@woven-canvas/plugin-arrows": "workspace:^",
     "@woven-canvas/plugin-canvas-controls": "workspace:^",
     "@woven-canvas/plugin-eraser": "workspace:^",
@@ -67,13 +66,13 @@
     "@tiptap/extensions": "^3.15.3",
     "@tiptap/vue-3": "^3.15.3",
     "@vueuse/core": "^14.0.0",
-    "@woven-ecs/canvas-store": "catalog:",
-    "perfect-freehand": "^1.2.2",
-    "vue": "^3.5.26"
+    "perfect-freehand": "^1.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.4",
     "@vue/test-utils": "^2.4.6",
+    "@woven-canvas/math": "workspace:^",
+    "@woven-ecs/canvas-store": "catalog:",
     "typescript": "^5.9.3",
     "vite": "^5.4.21",
     "vitest": "^4.0.7",
@@ -81,6 +80,9 @@
   },
   "peerDependencies": {
     "@woven-canvas/core": "workspace:^",
+    "@woven-canvas/math": "workspace:^",
+    "@woven-ecs/canvas-store": "catalog:",
+    "@woven-ecs/core": "catalog:",
     "typescript": "^5",
     "vue": "^3"
   }
