make plugins peer dependencies

--- a/packages/plugin-eraser/package.json
+++ b/packages/plugin-eraser/package.json
@@ -42,11 +42,8 @@
     "prepublishOnly": "pnpm build"
   },
   "devDependencies": {
-    "@woven-canvas/core": "workspace:^",
-    "@woven-canvas/math": "workspace:^",
     "resize-observer-polyfill": "^1.5.1",
-    "vitest": "^4.0.7",
-    "zod": "catalog:"
+    "vitest": "^4.0.7"
   },
   "type": "module",
   "peerDependencies": {
